# ROBOSOCCER

./: .gitmodules  README.md
centralised-ai-main/centralised-ai-main/: .gitignore  CMakeLists.txt  LICENSE  README.md
centralised-ai-main/centralised-ai-main/docs/: Doxyfile
centralised-ai-main/centralised-ai-main/docs/manual/: changelog.md  developer_guide.md  user_guide.md
centralised-ai-main/centralised-ai-main/models/: agent_network0.pt  critic_network.pt
centralised-ai-main/centralised-ai-main/models/old_agents/: agent_network0.pt  critic_network.pt
centralised-ai-main/centralised-ai-main/src/: CMakeLists.txt  common_types.h  main.cc
centralised-ai-main/centralised-ai-main/src/collective-robot-behaviour/: CMakeLists.txt  communication.cc  communication.h  evaluation.cc  evaluation.h  game_state_base.h  mappo.cc  mappo.h  network.cc  network.h  reward.cc  reward.h  run_state.cc  run_state.h  utils.cc  utils.h
centralised-ai-main/centralised-ai-main/src/simulation-interface/: CMakeLists.txt  simulation_interface.cc  simulation_interface.h
centralised-ai-main/centralised-ai-main/src/simulation-interface/proto/: grsim_commands.proto  grsim_packet.proto
centralised-ai-main/centralised-ai-main/src/ssl-interface/: CMakeLists.txt  automated_referee.cc  automated_referee.h  referee_command_functions.cc  referee_command_functions.h  simulation_reset.cc  simulation_reset.h  ssl_game_controller_client.cc  ssl_game_controller_client.h  ssl_vision_client.cc  ssl_vision_client.h
centralised-ai-main/centralised-ai-main/src/ssl-interface/proto/: grsim_commands.proto  grsim_replacement.proto  ssl_gc_common.proto  ssl_gc_game_event.proto  ssl_gc_geometry.proto  ssl_gc_referee_message.proto  ssl_vision_detection.proto  ssl_vision_geometry.proto  ssl_vision_wrapper.proto
centralised-ai-main/centralised-ai-main/test/: CMakeLists.txt  main_test.cc
centralised-ai-main/centralised-ai-main/test/collective-robot-behaviour-test/: communication_test.cc  mappo_test.cc  network_test.cc  reward_test.cc  run_state_test.cc  utils_test.cc
centralised-ai-main/centralised-ai-main/test/simulation-interface-test/: simulation_interface_test.cc
centralised-ai-main/centralised-ai-main/test/ssl-interface-test/: automated_referee_test.cc  ssl_game_controller_client_test.cc  ssl_vision_client_test.cc
robot-controller-interface-main/robot-controller-interface-main/: .gitignore  .project  CMakeLists.txt  README.md
robot-controller-interface-main/robot-controller-interface-main/config/: README.md
robot-controller-interface-main/robot-controller-interface-main/config/launch/: navigation_launch_ssl_robocup.py
robot-controller-interface-main/robot-controller-interface-main/config/map/: ssl_robocup_map.yaml
robot-controller-interface-main/robot-controller-interface-main/config/param/: nav2_params_ssl_robocup.yaml  through_pose_ssl.xml  to_pose_ssl.xml
robot-controller-interface-main/robot-controller-interface-main/docs/: Doxyfile
robot-controller-interface-main/robot-controller-interface-main/docs/manual/: changelog.md  user_guide.md
robot-controller-interface-main/robot-controller-interface-main/src/: CMakeLists.txt  common_types.h  main.cc
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/: README.md  uart-communication-raspberrypi.cc
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/.metadata/: .log4j2.xml  version.ini
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/.metadata/.plugins/org.eclipse.cdt.core/: stm32-code.language.settings.xml
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/: 3.snap
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.projects/robosoccer-stm32/: .markers  2.tree
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/robosoccer-stm32/Debug/: makefile  robosoccer-stm32.elf  robosoccer-stm32.list  robosoccer-stm32.map
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/robosoccer-stm32/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32h7xx_hal_msp.cyclo  stm32h7xx_hal_msp.su  subdir.mk
robot-controller-interface-main/robot-controller-interface-main/src/hardware-interface/robosoccer-stm32/Debug/Drivers/STM32H7xx_HAL_Driver/Src/: subdir.mk
robot-controller-interface-main/robot-controller-interface-main/src/individual-robot-behaviour/: CMakeLists.txt  ball.cc  ball.h  path_planning.cc  path_planning.h  state.cc  state.h  supporting.cc  supporting.h
robot-controller-interface-main/robot-controller-interface-main/test/: CMakeLists.txt  main_test.cc
robot-controller-interface-main/robot-controller-interface-main/test/individual-robot-behaviour-test/: ball_test.cc  path_planning_test.cc  state_test.cc  supporting_test.cc
(+4132 files in other folders)
